# k8s-minikube-ci-cd-ec2

./: .gitignore  Dockerfile  README.md  build.sh  docker-compose.yml  pyproject.toml  run_server.sh  wait-for-it.sh
.github/workflows/: deploy.yml
kubernetes-configs/: demo-api-deployment.yml  demo-api-service.yml  demo-apis-configmap.yml  postgres-deployment.yaml  postgres-pvc.yml  postgres-secret.yaml
main/: settings.py  urls.py
social_site/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
social_site/migrations/: 0001_initial.py
todo/: models.py  serializers.py  urls.py  views.py
todo/migrations/: 0001_initial.py
